// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-name Renders the logged in customer full name when logged in is true 1`] = `
<sc-customer-name size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="name" disabled="" help="" name="name" type="text" value="Jack Burrows"></sc-input>
  </mock:shadow-root>
</sc-customer-name>
`;

exports[`sc-customer-name Renders the passed full name when the customer is not logged in 1`] = `
<sc-customer-name size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="name" help="" name="name" type="text" value="John Doe"></sc-input>
  </mock:shadow-root>
</sc-customer-name>
`;

exports[`sc-customer-name renders 1`] = `
<sc-customer-name size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="name" help="" name="name" type="text"></sc-input>
  </mock:shadow-root>
</sc-customer-name>
`;
